[package]
name = "proxie"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Library for making requests through HTTP or SOCKS proxy"
readme = "README.md"
repository = "https://github.com/dynos01/proxie"
categories = ["network-programming"]
include = ["src/**/*.rs", "Cargo.toml", "README.md"]

[dependencies]
base64 = "0.21.0"
httparse = "1.8.0"
async-trait = "0.1.64"
async-std = "1.12.0"