[package]
name = "proxie"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Library for making requests through HTTP or SOCKS proxy"
readme = "README.md"
repository = "https://github.com/dynos01/proxie"
categories = ["network-programming"]
include = ["src/**/*.rs", "Cargo.toml", "README.md"]

[dependencies]
base64 = "0.21.0"
httparse = "1.8.0"
futures = { version = "0.3.21", optional = true }
async-trait = { version = "0.1.64", optional = true }
async-std = { version = "1.12.0", optional = true }
tokio = { version = "1.26.0", features = ["net", "io-util"], optional = true }

[features]
enable_sync = []
enable_tokio = ["tokio", "async-trait"]
enable_async_std = ["async-std", "futures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
